Fix worker cards width on mobile

--- a/styles.css
+++ b/styles.css
@@ -1080,5 +1080,6 @@ img {
   .team-card {
     margin: 0 auto;
     max-width: 400px;
+    width: 100%;
   }
 }
